cmake_minimum_required(VERSION 3.9)
project(project1)

set(CMAKE_CXX_STANDARD 11)
set(INPUT_FILE1 input)
set(INPUT_FILE2 input2)
#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_executable(project1 main.cpp)

#configure_file(${INPUT_FILE1} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${INPUT_FILE1} COPYONLY)
#configure_file(${INPUT_FILE2} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${INPUT_FILE2} COPYONLY)

configure_file(${INPUT_FILE1} ${CMAKE_BINARY_DIR}/${INPUT_FILE1} COPYONLY)
configure_file(${INPUT_FILE2} ${CMAKE_BINARY_DIR}/${INPUT_FILE2} COPYONLY)
